--- a/Homework5.ipynb
+++ b/Homework5.ipynb
@@ -17,11 +17,7 @@
       "cell_type": "markdown",
       "source": [
         "**Questão 1:**</br>\n",
-        "**B –** Dada a aplicação da SVM, a melhor seria a SVM polinomial por conta dos acertos. 
-        LINEAR SVM: 2 ERROS</br>
-        SVM: 1 ERRO</br>
-        RBF: 1 ERRO</br>
-        POLINOMIAL: 0 ERROS"
+        "**B –** Dada a aplicação da SVM, a melhor seria a SVM polinomial por conta dos acertos."
       ],
       "metadata": {
         "id": "q95KZgMdoWiq"
