--- a/Homework5.ipynb
+++ b/Homework5.ipynb
@@ -17,7 +17,11 @@
       "cell_type": "markdown",
       "source": [
         "**Questão 1:**</br>\n",
-        "**B –** Dada a aplicação da SVM, a melhor seria a SVM polinomial por conta dos acertos."
+        "**A -** LINEAR SVM: 2 ERROS</br>\n",
+        "SVM: 1 ERRO</br>\n",
+        "RBF: 1 ERRO</br>\n",
+        "POLINOMIAL: 0 ERROS</br></br>\n",
+        "**B –** Dada a aplicação da SVM, a melhor seria a SVM linear por conta da sua própria margem máxima, além de ter uma ótima abrangência em relação aos outros pontos, tanto quanto melhor predição de valor para os exemplos e formalizações em si."
       ],
       "metadata": {
         "id": "q95KZgMdoWiq"
